estructura iniciar de la cabecera Please enter the commit message for your changes. Lines starting

--- a/proyecto.html
+++ b/proyecto.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="container">
+        <div class="cabe">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum repudiandae voluptates eveniet aperiam suscipit, perferendis quos ab accusamus impedit quo magni, accusantium sed laboriosam omnis distinctio nesciunt, iure doloremque itaque.</div>
     <h1 id="post"> 
         Este es el titulo atractivo e interesante del post
     </h1>
