agregando parrafos a html

--- a/proyecto.html
+++ b/proyecto.html
@@ -19,6 +19,9 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ipsum similique velit. Dolore autem quae, obcaecati error vitae voluptates perferendis labore accusamus natus sapiente, veniam veritatis, delectus at omnis quaerat!</p>
         <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias labore esse, velit officia explicabo illum nihil voluptas culpa? Doloribus, ut. Alias iure, optio voluptate est excepturi consequatur tempore atque corporis.</small>
         <address>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit corporis dolorum officia fugiat et eum temporibus maiores, harum dolores explicabo eos? Maxime ducimus qui numquam, quidem nam nemo quia laudantium!</address>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ipsum similique velit. Dolore autem quae, obcaecati error vitae voluptates perferendis labore accusamus natus sapiente, veniam veritatis, delectus at omnis quaerat!</p>
+        <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias labore esse, velit officia explicabo illum nihil voluptas culpa? Doloribus, ut. Alias iure, optio voluptate est excepturi consequatur tempore atque corporis.</small>
+        <address>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit corporis dolorum officia fugiat et eum temporibus maiores, harum dolores explicabo eos? Maxime ducimus qui numquam, quidem nam nemo quia laudantium!</address>
     </div>
 </body>
 
